--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "client-react-rest",
+    "name": "client-julseb-lib-boilerplate-fullstack",
     "private": true,
     "version": "0.0.0",
     "type": "module",
