--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-rest",
+    "name": "julseb-lib-boilerplate-fullstack",
     "version": "0.0.0",
     "private": true,
     "type": "module",
