Add more styling to CLI

--- a/package.json
+++ b/package.json
@@ -40,10 +40,13 @@
         "@types/bcryptjs": "^2.4.6",
         "@types/cookie-parser": "^1.4.7",
         "@types/cors": "^2.8.17",
+        "@types/figlet": "^1.7.0",
         "@types/morgan": "^1.9.9",
         "@types/multer": "^1.4.12",
         "@types/nodemailer": "^6.4.16",
+        "chalk": "^5.3.0",
         "cross-env": "^7.0.3",
+        "figlet": "^1.8.0",
         "plop": "^4.0.1",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
