--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
         "dev": "vite --open",
         "build": "tsc && vite build",
         "lint": "./node_modules/.bin/eslint",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "format": "prettier --write src/"
     },
     "dependencies": {
         "@julseb-lib/react": "^0.0.77",
@@ -35,6 +36,7 @@
         "eslint-plugin-react-hooks": "^5.0.0",
         "eslint-plugin-react-refresh": "^0.4.14",
         "globals": "^15.12.0",
+        "prettier": "^3.4.2",
         "typescript": "^5.7.2",
         "typescript-eslint": "^8.16.0",
         "vite": "^6.0.1",
