--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,11 @@
         "format": "prettier --write src/"
     },
     "dependencies": {
-        "@julseb-lib/react": "^0.0.77",
+        "@cloudinary/react": "^1.13.1",
+        "@cloudinary/url-gen": "^1.21.0",
+        "@julseb-lib/react": "^0.0.81",
         "axios": "^1.7.8",
+        "classnames": "^2.5.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^7.0.1",
