--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
         "@typescript-eslint/eslint-plugin": "^8.16.0",
         "@typescript-eslint/parser": "^8.16.0",
         "@vitejs/plugin-react": "^4.3.4",
+        "dotenv": "^16.4.7",
         "eslint": "^9.15.0",
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-react": "^7.37.2",
