--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "cd client && yarn build",
+        "build": "tsc && cd client && yarn build",
         "install": "cd client && yarn",
         "server": "tsx server/index.ts",
         "client": "cd client && yarn dev",
@@ -55,6 +55,6 @@
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
         "tsx": "^4.19.2",
-        "typescript": "^5.7.2"
+        "typescript": "^5.8.3"
     }
 }
